--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section>
             <h1>Wide Coverage Location</h1>
             <p>Shared rides, There’s lots to do in your city, and we’ve got the rides to help you enjoy it all. And
-                they’re all availablee right from your app.</p>
+                they’re all available left from your app.</p>
             <a class="learn">Learn More</a>
         </section>
     </main>
